--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Montserrat", Arial, sans-serif;
-  color: #242940;
+  color: rgb(36, 41, 64);
   background-color: #5367ff;
   font-weight: 400;
 }
@@ -44,7 +44,7 @@ h4,
 h5,
 h6 {
   text-wrap: balance;
-  color: #242940;
+  color: rgb(36, 41, 64);
   font-weight: 700;
   overflow-wrap: break-word;
 }
@@ -68,6 +68,65 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 600px;
+  padding: 2rem;
+  background-color: #7f8dfc;
+  border-radius: 8px;
+  box-shadow: 0 8px 12px rgba(36, 41, 64, 0.5);
+  gap: 1vh;
+}
+
+input {
+  border: 2px solid rgb(36, 41, 64);
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+input:focus {
+  outline: none;
+  border-color: #5367ff;
+}
+
+label {
+  font-size: clamp(12px, 1.875vw + 0.375rem, 18.75px);
+  color: rgb(36, 41, 64);
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.submit-button {
+  background-color: rgb(36, 41, 64);
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: clamp(12px, 1.875vw + 0.375rem, 18.75px);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.submit-button:hover, .submit-button:focus {
+  background-color: #5367ff;
+  font-weight: bold;
+}
+.submit-button:active {
+  background-color: #fa5757;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 footer {
