--- a/css/styles.css
+++ b/css/styles.css
@@ -78,18 +78,29 @@ main {
   min-height: 100vh;
 }
 
-.form {
+fieldset {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   max-width: 600px;
-  padding: 2rem;
+  padding: 4rem;
   background-color: #7f8dfc;
   border-radius: 8px;
   box-shadow: 0 8px 12px rgba(36, 41, 64, 0.5);
   gap: 1vh;
+  border: 2px solid rgb(36, 41, 64);
+}
+fieldset legend {
+  font-size: clamp(12px, 1.875vw + 0.375rem, 18.75px);
+  background-color: #7f8dfc;
+  color: rgb(36, 41, 64);
+  font-weight: bold;
+  margin-bottom: 1rem;
+  border: 2px solid rgb(36, 41, 64);
+  padding: 0.1rem 0.3rem;
+  border-radius: 5px;
 }
 
 input {
