--- a/css/styles.scss
+++ b/css/styles.scss
@@ -122,18 +122,30 @@ main {
   min-height: 100vh;
 }
 
-.form {
+fieldset {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   max-width: 600px;
-  padding: $spacing-md;
+  padding: $spacing-lg;
   background-color: $light-primary-blue;
   border-radius: 8px;
   box-shadow: 0 8px 12px rgba(36, 41, 64, 0.5);
   gap: 1vh;
+  border: 2px solid $dark-grey;
+
+  & legend {
+    font-size: $font-size-small;
+    background-color: $light-primary-blue;
+    color: $dark-grey;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    border: 2px solid $dark-grey;
+    padding: 0.1rem 0.3rem;
+    border-radius: 5px;
+  }
 }
 
 input {
