--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,12 @@ main {
   color: #9194a2;
   opacity: 0.8;
 }
+.form__input:valid {
+  border-color: #238a3b;
+}
+.form__input:user-invalid {
+  border-color: #fa5757;
+}
 .form__label {
   font-size: clamp(12px, 1.875vw + 0.375rem, 18.75px);
   color: rgb(36, 41, 64);
